force-app/main/default/objects/SK_ACH_Fund__c/SK_ACH_Fund__c.object-meta.xml
<CustomObject>
    <label>Fund</label>
    <nameField>
        <label>Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>