force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Auditor__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Auditor__c</fullName>
    <label>Auditor</label>
    <description>Audit firm</description>
    <type>Text</type>
    <length>255</length>
</CustomField>