force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Carried_Interest_Percent__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Carried_Interest_Percent__c</fullName>
    <defaultValue>20.00</defaultValue>
    <description>GP profit share after hurdle</description>
    <label>Carried Interest (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>