force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Deployment_Rate__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Deployment_Rate__c</fullName>
    <description>Percentage of capital deployed (Called / Commitments)</description>
    <formula>IF(SK_ACH_Total_Commitments__c &gt; 0, (SK_ACH_Total_Called_Capital__c / SK_ACH_Total_Commitments__c) * 100, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>