force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Description__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Description__c</fullName>
    <description>Fund strategy and notes</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>