force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Final_Liquidation_Date__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Final_Liquidation_Date__c</fullName>
    <description>Expected fund closure date</description>
    <label>Final Liquidation Date</label>
    <type>Date</type>
</CustomField>