force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Fund_Administrator__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund_Administrator__c</fullName>
    <label>Fund Administrator</label>
    <description>Third-party administrator name</description>
    <type>Text</type>
    <length>255</length>
</CustomField>