force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Fund_Domicile__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund_Domicile__c</fullName>
    <description>Legal jurisdiction</description>
    <label>Fund Domicile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Delaware</fullName>
            </value>
            <value>
                <fullName>Cayman Islands</fullName>
            </value>
            <value>
                <fullName>Luxembourg</fullName>
            </value>
            <value>
                <fullName>Ireland</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>