force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Fund_Term_Years__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund_Term_Years__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Total fund life in years</description>
    <label>Fund Term (Years)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>