force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Fund_Type__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Fund_Type__c</fullName>
    <label>Fund Type</label>
    <description>Type of fund</description>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyout</fullName>
            </value>
            <value>
                <fullName>Growth Equity</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Fund of Funds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>