force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_General_Partner__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_General_Partner__c</fullName>
    <description>Name of GP entity</description>
    <label>General Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>