force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Hurdle_Rate_Percent__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Hurdle_Rate_Percent__c</fullName>
    <label>Hurdle Rate (%)</label>
    <description>Preferred return threshold</description>
    <required>true</required>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>8.00</defaultValue>
</CustomField>