force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Investment_Period_End__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Period_End__c</fullName>
    <description>Last date for new investments</description>
    <label>Investment Period End</label>
    <type>Date</type>
</CustomField>