force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Investment_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Investment_Period_Start__c</fullName>
    <description>When fund can start investing</description>
    <label>Investment Period Start</label>
    <type>Date</type>
</CustomField>