force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <description>Full legal name of fund entity</description>
    <type>Text</type>
    <length>255</length>
</CustomField>