force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Management_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Management_Fee_Percent__c</fullName>
    <label>Management Fee (%)</label>
    <description>Annual management fee rate</description>
    <required>true</required>
    <type>Percent</type>
    <precision>5</precision>
    <scale>2</scale>
    <defaultValue>2.00</defaultValue>
</CustomField>