force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Net_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Net_Cash_Flow__c</fullName>
    <label>Net Cash Flow</label>
    <description>Total Distributions minus Total Called Capital</description>
    <formula>SK_ACH_Total_Distributions__c - SK_ACH_Total_Called_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>