force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Status__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Status__c</fullName>
    <description>Current fund status</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fundraising</fullName>
                <default>true</default>
                <label>Fundraising</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Harvesting</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>