force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Target_Fund_Size__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Target_Fund_Size__c</fullName>
    <label>Target Fund Size</label>
    <description>Target capital to raise</description>
    <required>true</required>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>