force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Total_Distributions__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Distributions__c</fullName>
    <description>Sum of all distribution amounts (calculated via trigger)</description>
    <label>Total Distributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>