force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Total_Unfunded__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Total_Unfunded__c</fullName>
    <description>Total Commitments minus Total Called Capital</description>
    <formula>SK_ACH_Total_Commitments__c - SK_ACH_Total_Called_Capital__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Unfunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>