force-app/main/default/objects/SK_ACH_Fund__c/fields/SK_ACH_Vintage_Year__c.field-meta.xml
<CustomField>
    <fullName>SK_ACH_Vintage_Year__c</fullName>
    <label>Vintage Year</label>
    <description>Year the fund was established</description>
    <required>true</required>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>