force-app/main/default/objects/SK_ACH_Fund__c/recordTypes/Fund.recordType-meta.xml
<RecordType>
    <fullName>Fund</fullName>
    <active>true</active>
    <description>ACH Fund</description>
    <label>Fund</label>
</RecordType>