force-app/main/default/objects/SK_ACH_Fund__c/validationRules/Target_Fund_Size_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Target_Fund_Size_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Target fund size must be greater than zero</description>
    <errorConditionFormula>SK_ACH_Target_Fund_Size__c &lt;= 0</errorConditionFormula>
    <errorMessage>Target fund size must be greater than zero.</errorMessage>
</ValidationRule>