force-app/main/default/objects/SK_ACH_Fund__c/listViews/All_Funds_Financial_Summary.listView-meta.xml
<ListView>
    <fullName>All_Funds_Financial_Summary</fullName>
    <columns>NAME</columns>
    <columns>SK_ACH_Fund_Type__c</columns>
    <columns>SK_ACH_Total_Commitments__c</columns>
    <columns>SK_ACH_Total_Called_Capital__c</columns>
    <columns>SK_ACH_Total_Unfunded__c</columns>
    <columns>SK_ACH_Total_Distributions__c</columns>
    <columns>SK_ACH_Net_Cash_Flow__c</columns>
    <columns>SK_ACH_Deployment_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Funds - Financial Summary</label>
</ListView>